--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ h2{
 }
 /* NAV */
 header {
-  background:url(https://pbs.twimg.com/media/CvTInJAXgAA6wpd.png) no-repeat 0 50% #ffff;
+  background:url(https://pbs.twimg.com/media/CvTInJAXgAA6wpd.png) no-repeat 0 50% #fff;
   background-size: 30%;
 }
 header nav{
